# AxisEngine

./: .bocan.yaml  .gitignore  .tmuxp.yaml  CMakeLists.txt  CMakePresets.json  README.md
.opencode/: AGENTS.md
scripts/: build-clean.sh  run-debug.sh  run-release.sh  run-test.sh
source/AxisEngine-App-Laser/: CMakeLists.txt
source/AxisEngine-App-Laser/source/: Laser.cpp
source/AxisEngine-App-Picker/: CMakeLists.txt
source/AxisEngine-App-Picker/source/: Picker.cpp
source/AxisEngine-App-Plotter/: CMakeLists.txt
source/AxisEngine-App-Plotter/source/: Plotter.cpp
source/AxisEngine-App-Printer/: CMakeLists.txt
source/AxisEngine-App-Printer/source/: Printer.cpp
source/AxisEngine-App-Router/: CMakeLists.txt
source/AxisEngine-App-Router/source/: Router.cpp
source/AxisEngine-App-Test/: CMakeLists.txt
source/AxisEngine-App-Test/source/: Test.cpp
source/AxisEngine-Lib-Core/: CMakeLists.txt
source/AxisEngine-Lib-Core/source/: AxisEngine.cpp  AxisEngine.hpp  Event.cpp  Kernel.cpp  Kernel.hpp  Module.cpp  Module.hpp  Task.cpp  aepch.cpp  aepch.hpp
source/AxisEngine-Lib-Core/source/Core/: Event.cpp  Event.hpp  Kernel.cpp  Kernel.hpp  Module.cpp  Module.hpp  Task.cpp  Task.hpp  Tool.cpp  Tool.hpp  Worker.cpp  Worker.hpp
source/AxisEngine-Lib-Core/source/Debug/: Logger.cpp  Logger.hpp
source/AxisEngine-Lib-Core/source/Events/: BlockReceivedEvent.cpp  BlockReceivedEvent.hpp  ConsoleLineReceivedEvent.cpp  ConsoleLineReceivedEvent.hpp  EnableEvent.cpp  EnableEvent.hpp  GcodeReceivedEvent.cpp  GcodeReceivedEvent.hpp  HaltEvent.cpp  HaltEvent.hpp  IdleEvent.cpp  IdleEvent.hpp  MainLoopEvent.cpp  MainLoopEvent.hpp  SecondTickEvent.cpp  SecondTickEvent.hpp
source/AxisEngine-Lib-Core/source/Modules/Communication/: GcodeDispatch.cpp  GcodeDispatch.hpp  SerialConsole.cpp  SerialConsole.hpp  SimpleShell.cpp  SimpleShell.hpp
source/AxisEngine-Lib-Core/source/Modules/Communication/Streams/: ConsoleStream.cpp  ConsoleStream.hpp  FileStream.cpp  FileStream.hpp  NetworkStream.cpp  NetworkStream.hpp  Stream.hpp
source/AxisEngine-Lib-Core/source/Modules/Communication/Utils/: Gcode.cpp  Gcode.hpp  SerialMessage.cpp  SerialMessage.hpp
source/AxisEngine-Lib-Core/source/Modules/Hardware/: KillSwitch.hpp  LimitSwitch.cpp  LimitSwitch.hpp  StepperMotor.cpp  StepperMotor.hpp
source/AxisEngine-Lib-Core/source/Modules/Hardware/Utils/: Pin.cpp  Pin.hpp
source/AxisEngine-Lib-Core/source/Modules/MotionControl/: Conveyer.cpp  Conveyer.hpp  Robot.cpp  Robot.hpp
source/AxisEngine-Lib-Core/source/Modules/MotionControl/Solutions/: CartesianSolution.cpp  CartesianSolution.hpp  Solution.hpp
source/AxisEngine-Lib-Core/source/Modules/MotionControl/Utils/: Block.cpp  Block.hpp  BlockQueue.cpp  BlockQueue.hpp  Types.hpp
source/AxisEngine-Lib-Core/source/Modules/Timers/: SlowTicker.cpp  SlowTicker.hpp  StepTicker.cpp  StepTicker.hpp
source/AxisEngine-Lib-Core/test/: core.test.cpp
test/gcode/: router-cylinder.gcode
test/scripts/: generator.py
(+123 files in other folders)
